explicitly process invalid keycodes

Since dd36387c1fe704914cf41dd1e7333bac703e8ca7 in kwin, key events with
invalid key codes are also passed to kglobalacceld. The code mistakenly
triggers the corresponding modifier-only shortcut.

BUG: 489001
FIXED-IN: 6.1.1